--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,11 @@
             "homepage": "https://moikrug.ru/depakespedro"
         }
     ],
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+
+    "autoload": {
+      "psr-4": {
+        "DepakesPedro\\LaravelAuthUrl\\": "src"
+      }
+    }
 }
